force-app/main/default/objects/Delegate_Public_Group__c/Delegate_Public_Group__c.object-meta.xml
<CustomObject>
    <description>used to store/manage all delegate public groups.</description>
    <label>Delegate Public Group</label>
    <nameField>
        <displayFormat>DPG-{0000}</displayFormat>
        <label>Delegate Public Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delegate Public Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>