force-app/main/default/objects/Delegate_Public_Group__c/fields/Banker__c.field-meta.xml
<CustomField>
    <fullName>Banker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Delegate_Public_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>