force-app/main/default/objects/Delegate_Public_Group__c/fields/Banker_Id__c.field-meta.xml
<CustomField>
    <fullName>Banker_Id__c</fullName>
    <formula>CASESAFEID(Banker__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banker Id</label>
    <type>Text</type>
</CustomField>