force-app/main/default/objects/Delegate_Public_Group__c/fields/Banker_Name__c.field-meta.xml
<CustomField>
    <fullName>Banker_Name__c</fullName>
    <formula>Banker__r.LastName  &amp; &quot;, &quot; &amp; Banker__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banker Name</label>
    <type>Text</type>
</CustomField>