force-app/main/default/objects/Delegate_Public_Group__c/fields/My_Delegate_Group__c.field-meta.xml
<CustomField>
    <fullName>My_Delegate_Group__c</fullName>
    <formula>Banker__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Delegate Group?</label>
    <type>Checkbox</type>
</CustomField>