force-app/main/default/objects/Delegate_Public_Group__c/fields/Public_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Public_Group_ID__c</fullName>
    <externalId>true</externalId>
    <label>Public Group ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>