force-app/main/default/objects/Delegate_Public_Group__c/validationRules/Cannot_change_banker_or_group.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_banker_or_group</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp;(ISCHANGED(Banker__c) || ISCHANGED(Public_Group_ID__c))</errorConditionFormula>
    <errorMessage>Banker and public group cannot be changed once the delegate public group is created.</errorMessage>
</ValidationRule>