force-app/main/default/objects/Delegate_Public_Group__c/listViews/Active_DPGs.listView-meta.xml
<ListView>
    <fullName>Active_DPGs</fullName>
    <columns>NAME</columns>
    <columns>Banker_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active DPGs</label>
</ListView>