force-app/main/default/objects/Delegate_Public_Group__c/listViews/All_DPGs.listView-meta.xml
<ListView>
    <fullName>All_DPGs</fullName>
    <columns>NAME</columns>
    <columns>Banker_Name__c</columns>
    <columns>Active__c</columns>
    <columns>Banker_Id__c</columns>
    <columns>Public_Group_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All DPGs</label>
</ListView>