force-app/main/default/objects/Delegate_Public_Group__c/listViews/Individual_DPG.listView-meta.xml
<ListView>
    <fullName>Individual_DPG</fullName>
    <columns>NAME</columns>
    <columns>Banker_Name__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Banker_Name__c</field>
        <operation>contains</operation>
        <value>bahra</value>
    </filters>
    <label>Individual DPG</label>
</ListView>